# ml

./: .gitignore  README.md  common.py  pyproject.toml
knn/: knn.py  pyproject.toml  test.py
linear_regression/: linear_regression.py  test.py
